# sundialy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  code-cov.yml  mypy.yml  tests.yml
docs/: analemmatic.rst  conf.py  index.rst  requirements.txt  tools.rst
sundialy/: __init__.py  analemmatic.py
sundialy/tools/: __init__.py  bird.py  constants.py  sampa.py  solpos.py  spa.py
test_sundialy/: test_sundialy.py  test_tools.py
